--- a/docs/fr/HONMA/2. Représentation des Ressources.md
+++ b/docs/fr/HONMA/2. Représentation des Ressources.md
@@ -10,15 +10,28 @@ HONMA utilise JSON comme format de sérialisation pour représenter ses ressourc
 
 Un tableau JSON contenant zéro, un ou plusieurs membres. Une collection est toujours homogène : tous ses membres sont de la même classe.
 
+L'URI d'une collection DOIT se terminer par un slash (`/`). Par exemple :
+
+- `/articles/`
+- `/users/`
+- `/articles/42/comments/`
+
 ### 2.2.2 Membre
 
 Un objet JSON pouvant appartenir à une classe spécifique. Un membre est identifié de manière unique par son attribut `id` au sein d'une même classe.
+
+L'URI d'un membre NE DOIT PAS se terminer par un slash. Par exemple :
+
+- `/articles/42`
+- `/users/15`
+- `/articles/42/comments/5`
 
 ## 2.3 Structure
 
 ### 2.3.1 Collections
 
 Une collection :
+
 - DOIT être un tableau JSON (`array`)
 - NE PEUT PAS avoir d'attributs propres
 - DOIT contenir uniquement des membres de même classe
@@ -26,6 +39,7 @@ Une collection :
 ### 2.3.2 Membres
 
 Un membre :
+
 - DOIT être un objet JSON (`object`)
 - DOIT avoir un attribut `id`
 - DOIT avoir un attribut `class`
@@ -34,6 +48,7 @@ Un membre :
 ## 2.4 Exemples
 
 ### 2.4.1 Collection d'articles
+
 ```json
 [
     {
@@ -52,6 +67,7 @@ Un membre :
 ```
 
 ### 2.4.2 Membre avec références
+
 ```json
 {
     "class": "article",
