--- a/docs/fr/HONMA/4. Navigation et Liens.md
+++ b/docs/fr/HONMA/4. Navigation et Liens.md
@@ -3,6 +3,7 @@
 ## 4.1 Principes Fondamentaux
 
 La navigation dans une API HONMA s'effectue exclusivement via les liens HTTP, utilisant l'en-tête `Link` tel que défini dans la RFC 8288. Cette approche garantit :
+
 - Une séparation claire entre les données et leur navigation
 - Une découverte progressive des ressources
 - Une évolution flexible des APIs
@@ -13,11 +14,13 @@ La navigation dans une API HONMA s'effectue exclusivement via les liens HTTP, ut
 ### 4.2.1 En-tête Link
 
 Chaque lien est exprimé dans l'en-tête HTTP `Link` et doit respecter la structure suivante :
+
 ```http
 Link: <uri>; rel="type-relation"; class="type-ressource"; id="identifiant"; title="description"
 ```
 
 Où :
+
 - `uri` : URI de la ressource cible
 - `rel` : Type de relation (voir section 4.3)
 - `class` : Type de la ressource cible
@@ -29,12 +32,14 @@ Où :
 Dans une API HONMA, les liens doivent respecter les règles suivantes :
 
 Pour les collections :
+
 - L'attribut `class` est OBLIGATOIRE
 - L'attribut `class` DOIT contenir exactement un token
 - L'attribut `id` est INTERDIT
 - La collection DOIT être homogène (tous les membres de même classe)
 
 Pour les membres :
+
 - L'attribut `class` est OBLIGATOIRE
 - L'attribut `id` est OBLIGATOIRE
 - L'attribut `class` DOIT contenir exactement un token
@@ -45,6 +50,7 @@ Pour les membres :
 HONMA définit plusieurs relations standard pour la navigation :
 
 ### 4.3.1 Relations de Collection
+
 - `collection` : Lien vers une collection
 - `item` : Lien vers un membre de la collection
 - `next` : Page suivante d'une collection
@@ -53,6 +59,7 @@ HONMA définit plusieurs relations standard pour la navigation :
 - `last` : Dernière page de la collection
 
 ### 4.3.2 Relations de Ressource
+
 - `self` : La ressource elle-même
 - `canonical` : Version canonique de la ressource
 - `alternate` : Représentation alternative
@@ -65,7 +72,7 @@ HONMA définit plusieurs relations standard pour la navigation :
 
 ```http
 HTTP/1.1 200 OK
-Link: </articles>; rel="collection"; class="article"; title="Articles"
+Link: </articles/>; rel="collection"; class="article"; title="Articles"
 Link: </articles/42>; rel="item"; class="article"; id="42"; title="Premier Article"
 Link: </articles/57>; rel="item"; class="article"; id="57"; title="Second Article"
 Content-Type: application/vnd.honma+json
@@ -89,8 +96,8 @@ Content-Type: application/vnd.honma+json
 ```http
 HTTP/1.1 200 OK
 Link: </articles/42>; rel="self"; class="article"; id="42"
-Link: </articles>; rel="collection"; class="article"
-Link: </articles/42/comments>; rel="related"; class="comment"; title="Commentaires"
+Link: </articles/>; rel="collection"; class="article"
+Link: </articles/42/comments/>; rel="related"; class="comment"; title="Commentaires"
 Link: </users/15>; rel="author"; class="user"; id="15"
 Content-Type: application/vnd.honma+json
 
@@ -106,11 +113,11 @@ Content-Type: application/vnd.honma+json
 
 ```http
 HTTP/1.1 200 OK
-Link: </articles>; rel="collection"; class="article"
-Link: </articles?page=3>; rel="next"; class="article"
-Link: </articles?page=1>; rel="prev"; class="article"
-Link: </articles?page=1>; rel="first"; class="article"
-Link: </articles?page=5>; rel="last"; class="article"
+Link: </articles/>; rel="collection"; class="article"
+Link: </articles/?page=3>; rel="next"; class="article"
+Link: </articles/?page=1>; rel="prev"; class="article"
+Link: </articles/?page=1>; rel="first"; class="article"
+Link: </articles/?page=5>; rel="last"; class="article"
 Content-Type: application/vnd.honma+json
 
 [
@@ -131,3 +138,5 @@ Content-Type: application/vnd.honma+json
 5. Chaque ressource DOIT inclure au minimum un lien `self`
 6. Les collections DOIVENT inclure des liens vers leurs membres
 7. La pagination DOIT utiliser les relations standard définies
+8. Les URIs des collections DOIVENT se terminer par un slash
+9. Les URIs des membres NE DOIVENT PAS se terminer par un slash
