--- a/docs/fr/HONMA/7. Interactions.md
+++ b/docs/fr/HONMA/7. Interactions.md
@@ -1,73 +1,230 @@
-# HONMA (HTTP Oriented Native Media Architecture)
+# 7. Interactions
 
-## 1. Introduction
+## 7.1 Négociation de Contenu
 
-### 1.1 Vue d'ensemble
+### 7.1.1 Types MIME
 
-HONMA (HTTP Oriented Native Media Architecture) est un protocole applicatif pour la conception d'APIs Web qui s'appuie sur les fondamentaux du Web et les standards existants. Né d'une volonté de simplification, HONMA propose une approche minimaliste mais rigoureuse de la conception d'APIs.
+Les clients DOIVENT spécifier leur préférence de format via l'en-tête `Accept`. Les types MIME supportés sont :
+- `application/json`
+- `application/vnd.honma+json`
 
-Le protocole repose sur cinq piliers fondamentaux :
-1. Le protocole HTTP et l'architecture REST comme fondation
-2. Une représentation structurée et homogène des ressources
-3. Un système d'identification et de classification cohérent
-4. Un mécanisme de navigation standardisé via les liens HTTP
-5. Une capacité d'introspection native des APIs
+```http
+Accept: application/vnd.honma+json, application/json
+```
 
-### 1.2 Objectifs
+### 7.1.2 Langue
 
-HONMA vise à :
-- Simplifier la conception des APIs Web en fournissant un cadre clair et cohérent
-- Maximiser l'utilisation des standards existants plutôt que d'en créer de nouveaux
-- Garantir une forte interopérabilité entre les systèmes
-- Faciliter l'évolution des APIs dans le temps
-- Réduire la complexité accidentelle dans la conception des APIs
-- Permettre une découverte automatique des capacités des APIs
+Les clients PEUVENT spécifier leur préférence linguistique via l'en-tête `Accept-Language` :
 
-### 1.3 Philosophie
+```http
+Accept-Language: fr-FR, fr;q=0.9, en;q=0.8
+```
 
-À l'image de l'architecture traditionnelle japonaise, HONMA privilégie la simplicité et l'efficacité. Cette approche repose sur plusieurs principes clés :
+Les serveurs DOIVENT indiquer la langue utilisée via l'en-tête `Content-Language` :
 
-#### 1.3.1 Minimalisme
-- Utilisation exclusive des mécanismes HTTP natifs
-- Limitation volontaire des abstractions
-- Élimination des fonctionnalités non essentielles
+```http
+Content-Language: fr-FR
+```
 
-#### 1.3.2 Cohérence
-- Application systématique des principes REST
-- Homogénéité dans la représentation des ressources
-- Uniformité dans l'identification et la navigation
+## 7.2 Méthodes HTTP
 
-#### 1.3.3 Évolutivité
-- Séparation claire entre données et navigation
-- Utilisation native de l'hypermedia
-- Support intégré de l'introspection
+### 7.2.1 GET
 
-### 1.4 Conventions
+Pour la consultation de ressources :
+- DOIT être idempotent
+- NE DOIT PAS modifier l'état des ressources
+- DOIT inclure les liens de navigation appropriés
+- PEUT supporter la pagination pour les collections
 
-#### 1.4.1 Formats
-- JSON comme unique format de données
-- Types MIME standardisés
-- En-têtes HTTP normalisés
+```http
+GET /articles/42
+Accept: application/vnd.honma+json
 
-#### 1.4.2 Gestion des erreurs
-- Utilisation du standard RFC 9457 (Problem Details for HTTP APIs)
-- Réponses d'erreur structurées et cohérentes
-- Messages d'erreur orientés solution
+HTTP/1.1 200 OK
+Content-Type: application/vnd.honma+json
+Link: </articles/42>; rel="self"; class="article"; id="42"
+Link: </articles/>; rel="collection"; class="article"
+```
 
-#### 1.4.3 Compatibilité
-- Support obligatoire du type MIME `application/json`
-- Support optionnel du type MIME `application/vnd.honma+json`
-- Respect strict de la sémantique HTTP
+### 7.2.2 POST
 
-### 1.5 Organisation du document
+Pour la création de nouvelles ressources :
+- DOIT être utilisé sur les collections
+- DOIT retourner 201 Created en cas de succès
+- DOIT inclure l'en-tête Location pointant vers la nouvelle ressource
+- DOIT inclure les liens appropriés dans la réponse
 
-Ce document est organisé en sections correspondant aux aspects fondamentaux du protocole :
-1. Introduction (cette section)
-2. Représentation des Ressources
-3. Identification et Classification
-4. Navigation et Liens
-5. Introspection et Découverte
-6. Gestion des Erreurs
-7. Interactions
+```http
+POST /articles/
+Content-Type: application/vnd.honma+json
 
-Chaque section définit un aspect spécifique du protocole et peut être consultée indépendamment, tout en maintenant une cohérence globale avec l'ensemble de la spécification.
+{
+    "title": "Nouvel Article",
+    "content": "Contenu de l'article..."
+}
+
+HTTP/1.1 201 Created
+Location: /articles/42
+Content-Type: application/vnd.honma+json
+Link: </articles/42>; rel="self"; class="article"; id="42"
+Link: </articles/>; rel="collection"; class="article"
+```
+
+### 7.2.3 PUT
+
+Pour le remplacement complet de ressources :
+- DOIT être idempotent
+- DOIT inclure tous les champs requis
+- DOIT retourner 200 OK si la ressource est modifiée
+- DOIT retourner 201 Created si la ressource est créée
+
+```http
+PUT /articles/42
+Content-Type: application/vnd.honma+json
+
+{
+    "title": "Article Mis à Jour",
+    "content": "Nouveau contenu..."
+}
+
+HTTP/1.1 200 OK
+Content-Type: application/vnd.honma+json
+Link: </articles/42>; rel="self"; class="article"; id="42"
+```
+
+### 7.2.4 PATCH
+
+Pour la modification partielle de ressources :
+- DOIT inclure uniquement les champs à modifier
+- DOIT respecter la sémantique de modification partielle
+- DOIT retourner 200 OK en cas de succès
+
+```http
+PATCH /articles/42
+Content-Type: application/vnd.honma+json
+
+{
+    "title": "Nouveau Titre"
+}
+
+HTTP/1.1 200 OK
+Content-Type: application/vnd.honma+json
+Link: </articles/42>; rel="self"; class="article"; id="42"
+```
+
+### 7.2.5 DELETE
+
+Pour la suppression de ressources :
+- DOIT être idempotent
+- DOIT retourner 204 No Content en cas de succès
+- NE DOIT PAS retourner de corps de réponse
+
+```http
+DELETE /articles/42
+
+HTTP/1.1 204 No Content
+```
+
+### 7.2.6 OPTIONS
+
+Pour l'introspection des ressources :
+- DOIT être idempotent
+- DOIT inclure l'en-tête Allow
+- DOIT retourner la documentation de la ressource
+
+```http
+OPTIONS /articles/42
+Accept: application/vnd.honma+json
+
+HTTP/1.1 200 OK
+Allow: GET, PUT, PATCH, DELETE, OPTIONS
+Content-Type: application/vnd.honma+json
+```
+
+## 7.3 Pagination
+
+### 7.3.1 Requête
+
+La pagination utilise les paramètres de requête suivants :
+- `page` : Numéro de la page (défaut: 1)
+- `per_page` : Nombre d'éléments par page (défaut: 20)
+
+```http
+GET /articles/?page=2&per_page=10
+```
+
+### 7.3.2 Réponse
+
+Les réponses paginées DOIVENT inclure les liens de navigation :
+- `first` : Première page
+- `last` : Dernière page
+- `next` : Page suivante (si disponible)
+- `prev` : Page précédente (si disponible)
+
+```http
+HTTP/1.1 200 OK
+Link: </articles/?page=1>; rel="first"; class="article"
+Link: </articles/?page=3>; rel="next"; class="article"
+Link: </articles/?page=1>; rel="prev"; class="article"
+Link: </articles/?page=5>; rel="last"; class="article"
+```
+
+## 7.4 Cache
+
+### 7.4.1 En-têtes de Cache
+
+Les serveurs DEVRAIENT utiliser les en-têtes appropriés :
+- `ETag` : Identifiant de version de la ressource
+- `Last-Modified` : Date de dernière modification
+- `Cache-Control` : Directives de mise en cache
+
+```http
+HTTP/1.1 200 OK
+ETag: "33a64df551425fcc55e4d42a148795d9f25f89d4"
+Last-Modified: Wed, 14 Feb 2024 22:31:52 GMT
+Cache-Control: private, max-age=3600
+```
+
+### 7.4.2 Validation Conditionnelle
+
+Les clients PEUVENT utiliser :
+- `If-Match` : Validation par ETag
+- `If-None-Match` : Validation inverse par ETag
+- `If-Modified-Since` : Validation par date
+- `If-Unmodified-Since` : Validation inverse par date
+
+```http
+GET /articles/42
+If-None-Match: "33a64df551425fcc55e4d42a148795d9f25f89d4"
+
+HTTP/1.1 304 Not Modified
+```
+
+## 7.5 Sécurité
+
+### 7.5.1 Authentification
+
+Les serveurs PEUVENT exiger une authentification via :
+- `Authorization` : En-tête standard d'authentification
+- `WWW-Authenticate` : Description du schéma d'authentification
+
+```http
+HTTP/1.1 401 Unauthorized
+WWW-Authenticate: Bearer realm="api.example.com"
+```
+
+### 7.5.2 CORS
+
+Pour les requêtes cross-origin, les serveurs DOIVENT gérer :
+- `Access-Control-Allow-Origin`
+- `Access-Control-Allow-Methods`
+- `Access-Control-Allow-Headers`
+- `Access-Control-Expose-Headers`
+
+```http
+HTTP/1.1 200 OK
+Access-Control-Allow-Origin: *
+Access-Control-Allow-Methods: GET, POST, PUT, PATCH, DELETE, OPTIONS
+Access-Control-Allow-Headers: Content-Type, Authorization
+Access-Control-Expose-Headers: Link, Location
+```
